Sort by modification date

--- a/app/src/main/res/layout/list_item_note.xml
+++ b/app/src/main/res/layout/list_item_note.xml
@@ -26,5 +26,15 @@
         android:textAppearance="@android:style/TextAppearance.Material.Body1"
         tools:text="Content"
         />
+    <TextView
+        android:id="@+id/modifiedLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textAppearance="@android:style/TextAppearance.Material.Body1"
+        tools:text="Content"
+        />
 
 </LinearLayout>
